add rq3 script for combining proposal dbs